--- a/FacturIA/.env.example
+++ b/FacturIA/.env.example
@@ -1,2 +1,3 @@
 # Copia este archivo como .env y completa con tus credenciales reales
 OPENAI_API_KEY=tu_clave_api_aqui
+DATABASE_URL=postgresql+psycopg2://usuario:contraseña@localhost:5432/nombre_bd
